objects/CustomerProperty.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINS_Maps_Corelogic_Hail_Risk__c</fullName>
        <label>Corelogic Hail Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very Low</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <description>Field choice selection indicates that the corresponding record is referenced in one or more official Q-Branch demo guides.</description>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>INS_Property_Code__c</fullName>
        <description>Identifier to ensure we do not add duplicate properties to an account, NB Properties can be duplicated if belopng to multiple parties but we do not want a new property created if it already exists.</description>
        <label>Property Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Image__c</fullName>
        <label>Main Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Type</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_CustomerProperties</fullName>
        <filterScope>Everything</filterScope>
        <label>All Customer Properties</label>
    </listViews>
    <recordTypes>
        <fullName>Commercial_Property</fullName>
        <active>true</active>
        <label>Commercial Property</label>
    </recordTypes>
    <recordTypes>
        <fullName>PersonalItem</fullName>
        <active>true</active>
        <label>Personal Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Property</fullName>
        <active>true</active>
        <label>Property</label>
    </recordTypes>
    <recordTypes>
        <fullName>Residential_Property</fullName>
        <active>true</active>
        <label>Residential Property</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vehicle</fullName>
        <active>true</active>
        <label>Vehicle</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>